--- a/QtGuiApplication1/QtGuiApplication1.vcxproj
+++ b/QtGuiApplication1/QtGuiApplication1.vcxproj
@@ -125,7 +125,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="QtGuiApplication1.cpp" />
+    <ClCompile Include="QtGuiMain.cpp" />
     <ClCompile Include="Utils.cpp" />
   </ItemGroup>
   <ItemGroup>
